Add virtual clock
