# json_schema/openapi.json
@@ -1530,15 +1530,6 @@
                         "schema": {
                             "type": "integer"
                         }
-                    },
-                    {
-                        "name": "isArchieved",
-                        "in": "query",
-                        "description": "flag to archieve the thesis",
-                        "required": false,
-                        "schema": {
-                            "type": "integer"
-                        }
                     }
                 ],
                 "requestBody": {
@@ -1602,6 +1593,66 @@
                 "responses": {
                     "204": {
                         "description": "Successful operation - No Content",
+                        "content": {}
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {}
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "content": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "content": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {}
+                    }
+                },
+                "security": [
+                    {
+                        "cookieAuth": []
+                    }
+                ]
+            }
+        },
+        "/thesisProposals/{thesisProposalId}/archive":{
+            "put": {
+                "tags": [
+                    "thesisProposal"
+                ],
+                "operationId": "archiveThesisProposal",
+                "parameters": [
+                    {
+                        "name": "authenticatedUserId",
+                        "in": "cookie",
+                        "required": true,
+                        "description": "The authenticated user id corresponds to the professor that perform the update",
+                        "schema": {
+                            "type": "string",
+                            "pattern": "^(p|P)[0-9]{6}$"
+                        }
+                    },
+                    {
+                        "name": "thesisProposalId",
+                        "in": "path",
+                        "description": "ID thesis proposal",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "content": {}
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "content": {}
                     },
                     "401": {
